--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://bootswatch.com/4/sketchy/bootstrap.min.css"
-    />
-    <title>NodeApp</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="/">NodeApp</a>
-    </nav>
+<% include partials/header %>
+<% include partials/navbar %>
 
-    <a id="login-button" href="/login">Log In With GitHub</a>
-  </body>
-</html>
+<div class="col-sm-6 mx-auto text-center text-primary p-2">
+  <h2 class="pb-5">Sign In</h2>
+
+  <a href="/login" id="login-button" class="btn btn-outline-dark"><i class="fab fa-github"></i> Login
+    With Github</a>
+  <a href="" class="btn btn-outline-info"><i class="fab fa-facebook"></i> Login with
+    Facebook</a>
+  <a href="" class="btn btn-outline-danger"><i class="fab fa-google"></i> Login with Google</a>
+</div>
+
+<% include partials/footer %>
