Revert "Improved the 'Login with GitHub' implementation" commit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <div class="col-sm-6 mx-auto text-center text-primary p-2">
   <h2 class="pb-5">Sign In</h2>
 
-  <a href=auth/github id="login-button" class="btn btn-outline-dark"><i class="fab fa-github"></i> Login
+  <a href="/login" id="login-button" class="btn btn-outline-dark"><i class="fab fa-github"></i> Login
     With Github</a>
   <a href="" class="btn btn-outline-info"><i class="fab fa-facebook"></i> Login with
     Facebook</a>
