--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,11 @@
-<% include partials/header %>
-<% include partials/navbar %>
+<% include partials/header %> <% include partials/navbar %>
 
 <div class="col-sm-6 mx-auto text-center text-primary p-2">
   <h2 class="pb-5">Sign In</h2>
 
-  <a href="/login" id="login-button" class="btn btn-outline-dark"><i class="fab fa-github"></i> Login
-    With Github</a>
-  <a href="" class="btn btn-outline-info"><i class="fab fa-facebook"></i> Login with
-    Facebook</a>
-  <a href="" class="btn btn-outline-danger"><i class="fab fa-google"></i> Login with Google</a>
+  <a href="/auth/github" class="btn btn-outline-dark"
+    ><i class="fab fa-github"></i> Login With Github</a
+  >
 </div>
 
 <% include partials/footer %>
