--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+  <div class="container">
     <a class="navbar-brand" href="/">NodeApp</a>
+    <ul class="navbar-nav ml-auto">
+      <% if(isLoggedIn) {%>
+      <li class="nav-item active">
+        <a class="nav-link" href="/logout">Logout</a>
+      </li>
+      <% } %>
+    </ul>
+  </div>
 </nav>
