--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,9 +2,31 @@
   <div class="container">
     <a class="navbar-brand" href="/">NodeApp</a>
     <ul class="navbar-nav ml-auto">
-      <% if(isLoggedIn) {%>
+      <% if(!currentUser) { %>
+      <div
+        class="btn-group"
+        role="group"
+        aria-label="Button group with nested dropdown"
+      >
+        <button type="button" class="btn btn-light">Users</button>
+        <div class="btn-group" role="group">
+          <button
+            id="usersBtnGroup"
+            type="button"
+            class="btn btn-light dropdown-toggle"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          ></button>
+          <div class="dropdown-menu" aria-labelledby="usersBtnGroup">
+            <a class="dropdown-item" href="/users/login">Login</a>
+            <a class="dropdown-item" href="/users/register">Register</a>
+          </div>
+        </div>
+      </div>
+      <% } %> <% if(currentUser) { %>
       <li class="nav-item active">
-        <a class="nav-link" href="/logout">Logout</a>
+        <a class="ml-5 nav-link" href="/users/logout">Logout</a>
       </li>
       <% } %>
     </ul>
